# halp

./: README.md  pyproject.toml
halp/: env.py  main.py  prompts.py
src/: entrypoint.sh  main.py
tests/: test_env.py
