[tool.poetry]
name = "gpterm"
version = "0.1.0"
description = "Terminal helper that leverages LLMs and suggests commands for the user"
authors = ["Douglas Li <lidouglas@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.66.5"
rich = "^13.9.4"
fire = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
